--- a/render.yaml
+++ b/render.yaml
@@ -1,30 +1,61 @@
-databases:
-  - name: miniapp-db
-    databaseName: miniapp
-    user: miniapp_user
-
 services:
-  # Backend API Service
+  # PostgreSQL Database
+  - type: pserv
+    name: 123fakturera-db
+    env: postgres
+    plan: free
+    databaseName: 123fakturera
+    user: 123fakturera_user
+    ipAllowList: []
+
+  # Backend API (Docker)
   - type: web
-    name: miniapp-backend
-    env: node
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm run migrate && npm start
-    healthCheckPath: /health
+    name: 123fakturera-backend
+    env: docker
+    plan: free
+    dockerfilePath: ./backend/Dockerfile
+    dockerContext: ./backend
+    dockerCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
-      - key: DATABASE_URL
-        fromDatabase:
-          name: miniapp-db
-          property: connectionString
+      - key: PORT
+        value: 10000
+      - key: DB_HOST
+        fromService:
+          type: pserv
+          name: 123fakturera-db
+          property: host
+      - key: DB_NAME
+        fromService:
+          type: pserv
+          name: 123fakturera-db
+          property: database
+      - key: DB_USER
+        fromService:
+          type: pserv
+          name: 123fakturera-db
+          property: username
+      - key: DB_PASS
+        fromService:
+          type: pserv
+          name: 123fakturera-db
+          property: password
+      - key: DB_PORT
+        fromService:
+          type: pserv
+          name: 123fakturera-db
+          property: port
+      - key: CORS_ORIGIN
+        value: https://123fakturera-frontend.onrender.com
 
   # Frontend Static Site
   - type: web
-    name: miniapp-frontend
+    name: 123fakturera-frontend
     env: static
+    plan: free
     buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/dist
+    staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_URL
-        value: https://miniapp-backend.onrender.com/api
+        value: https://123fakturera-backend.onrender.com
